--- a/Aufgabe13/src/javafx/UI.fxml
+++ b/Aufgabe13/src/javafx/UI.fxml
@@ -9,15 +9,15 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml">
   <children>
-    <Button id="button1" layoutX="14.0" layoutY="109.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="572.0" text="Pin Bestatigen" />
-    <Button id="button2" layoutX="14.0" layoutY="155.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="572.0" text="Kontostand" />
-    <Button id="button3" layoutX="14.0" layoutY="292.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="572.0" text="Karte ausgeben" />
-    <TextField id="textField1" layoutX="14.0" layoutY="14.0" prefWidth="572.0" promptText="Kontonummer" />
-    <TextField id="textField2" layoutX="14.0" prefHeight="22.0" prefWidth="572.0" promptText="Pin Eingabe" AnchorPane.bottomAnchor="303.0" />
-    <TextField id="textField3" layoutX="14.0" layoutY="338.0" prefHeight="34.0" prefWidth="572.0" promptText="Informationstext" />
-    <Button id="button4" layoutX="14.0" layoutY="44.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="572.0" text="Karte eingaben" />
-    <Button id="button5" layoutX="14.0" layoutY="251.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="572.0" text="Geldabheben" />
-    <ChoiceBox id="choiceBox1" layoutX="14.0" layoutY="200.0" prefHeight="34.0" prefWidth="572.0">
+    <Button id="button1" layoutX="61.0" layoutY="75.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="228.0" text="Pin Bestatigen" />
+    <Button id="button2" layoutX="196.0" layoutY="122.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="228.0" text="Kontostand" />
+    <Button id="button3" layoutX="344.0" layoutY="316.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="183.0" text="Karte ausgeben" />
+    <TextField id="textField1" layoutX="344.0" layoutY="32.0" prefHeight="34.0" prefWidth="222.0" promptText="Kontonummer" text="" />
+    <TextField id="textField2" layoutX="61.0" prefHeight="34.0" prefWidth="228.0" promptText="Pin Eingabe" AnchorPane.bottomAnchor="334.0" />
+    <TextField id="textField3" editable="false" layoutX="14.0" layoutY="292.0" prefHeight="94.0" prefWidth="286.0" promptText="Informationstext" />
+    <Button id="button4" layoutX="344.0" layoutY="75.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="222.0" text="Karte eingaben" />
+    <Button id="button5" layoutX="344.0" layoutY="224.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="183.0" text="Geldabheben" />
+    <ComboBox id="ComboBox" layoutX="14.0" layoutY="248.0" prefHeight="33.999900000002526" prefWidth="128.0">
       <items>
         <FXCollections fx:factory="observableArrayList">
           <String fx:value="Item 1" />
@@ -25,6 +25,9 @@
           <String fx:value="Item 3" />
         </FXCollections>
       </items>
-    </ChoiceBox>
+    </ComboBox>
+    <RadioButton layoutX="14.0" layoutY="209.0" mnemonicParsing="false" text="Auswahl" />
+    <RadioButton layoutX="100.0" layoutY="209.0" mnemonicParsing="false" text="Freier" />
+    <TextField id="InfoText" layoutX="161.0" layoutY="248.0" prefHeight="34.0" prefWidth="128.0" promptText="Ihres Betrag" />
   </children>
 </AnchorPane>
